syntax = "proto2";

package server.protobuf.messages;

message TerminalQueuesSummaryMessage {
    repeated string queues = 1;
    repeated QueuesSummaryMessage summaries = 2;
}

message QueuesSummaryMessage {
    optional int64 start = 1;
    repeated QueueSummaryMessage queues = 2;
    optional StaffSummaryMessage staff = 3;
}

message QueueSummaryMessage {
    optional double pax = 1;
    optional int32 deskRecs = 2;
    optional int32 waitTime = 3;
    optional int32 actDesks = 4;
    optional int32 actWaitTime = 5;
}

message StaffSummaryMessage {
    optional int32 available = 1;
    optional int32 misc = 2;
    optional int32 moves = 3;
    optional int32 recommended = 4;
}
